# wayland-log-reader

./: .gitignore  CMakeLists.txt  Main.cpp  Main.qml  README.md  lodash.js  main.cpp
